--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,14 @@
 @import url("./header.css");
 @import url("./reset.css");
 @import url("./banner.css");
+@import url("./carrossel.css");
 
 :root {
     --cor-de-fundo: #EBECEE;
     --branco: #FFFFFF;
     --laranja: #EB9B00;
+    --laranja-escuro: #eb8500;
+    --azul: #002F52;
     --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
     --fonte-principal: "Poppins";
 }
