--- a/assets/css/banner.css
+++ b/assets/css/banner.css
@@ -33,5 +33,18 @@
     color: var(--branco);
     background: url("../img/Pesquisa.svg") no-repeat;
     background-position: 1em;
+}
 
+@media screen and (min-width: 1024px) {
+    .banner__titulo {
+        font-size: 36px;
+    }
+
+    .banner__pesquisa {
+        width: 50%;
+    }
+
+    .banner__pesquisa::placeholder {
+        background-position: 5em;
+    }
 }
