--- a/assets/css/carrossel.css
+++ b/assets/css/carrossel.css
@@ -88,5 +88,29 @@
 }
 
 
+@media screen and (min-width: 1024px) {
+    .carrossel__titulo {
+        font-size: 26px;
+    }
+
+    .swiper-pagination {
+        margin: 2em 0 1.5em 0;
+    }
+
+    .swiper {
+        width: 60%;
+    }
+
+    .swiper-button-prev, .swiper-button-next {
+        display: block;
+        top: 60%;
+    }
+
+    .card {
+        width: 57%;
+        margin: 2em auto;
+    }
+}
+
 
 
