--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -31,7 +31,7 @@
     width: 60vh;
 }
 
-.container__botao{
+.container__botao {
     display: none;
 }
 
@@ -58,3 +58,55 @@
     text-transform: uppercase;
 }
 
+.container__titulo, .opcoes  {
+    display: none;
+}
+
+
+@media screen and (min-width: 1024px) {
+
+    .container__titulo,
+    .container__titulo--negrito {
+        font-family: var(--fonte-secundaria);
+        font-size: 30px;
+
+    }
+
+    .container__titulo--negrito {
+        font-weight: 700;
+    }
+
+    .container__titulo {
+        font-weight: 400;
+        display: block;
+    }
+
+    .opcoes {
+        display: flex;
+    }
+
+    .opcoes__item {
+        padding: 0 1em;
+        text-transform: uppercase;
+    }
+
+    .opcoes__link {
+        text-decoration: none;
+        color: var(--preto);
+    }
+
+    
+    .container__imagem-transparente, .cabecalho__menu-hamburguer{
+        display: none;
+    }
+
+    .opcoes__botao {
+        display: none;
+    }
+
+    .opcoes__botao:checked ~ .lista-menu {
+        display: block;
+        width: auto;
+    }
+   
+}
