--- a/assets/css/topico.css
+++ b/assets/css/topico.css
@@ -29,3 +29,14 @@
 .topico__item {
     margin: 2em 0.5em;
 }
+
+
+@media screen and (min-width: 1024px) {
+    .topico__titulo {
+        font-size: 24px;
+    }
+    
+    .topico__link {
+        font-size: 24px;
+    }
+}
