--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,8 @@
 @import url("./topico.css");
 @import url("./contato.css");
 @import url("./rodape.css");
+@import url("./cadastro.css");
+@import url("./formulario.css");
 
 :root {
     --cor-de-fundo: #EBECEE;
@@ -15,6 +17,7 @@
     --preto: #000000;
     --cinza: #474646;
     --cinza-claro: #858585;
+    --vermelho: #D94937;
     --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
     --fonte-principal: "Poppins";
     --fonte-secundaria: "Josefin Sans";
