Utilizando métodos de array

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -24,6 +24,10 @@
     padding: 0.5em;
 }
 
+.link-logo{
+    text-decoration:none ;
+}
+
 .lista-menu {
     display: none;
     position: absolute;
