--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,8 @@
 @import url("./rodape.css");
 @import url("./cadastro.css");
 @import url("./formulario.css");
+@import url("./loja.css");
+
 
 :root {
     --cor-de-fundo: #EBECEE;
@@ -18,6 +20,11 @@
     --cinza: #474646;
     --cinza-claro: #858585;
     --vermelho: #D94937;
+    --text-title-color: #fc6621;
+    --text-description-color: #fc6621;
+    --text-price-color: #002f52;
+    --text-author-color: #858585;
+    --text-tag-color: #9c9c9c;
     --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
     --fonte-principal: "Poppins";
     --fonte-secundaria: "Josefin Sans";
@@ -28,7 +35,7 @@
     padding: 0;
 }
 
-body{
+body {
     background-color: var(--cor-de-fundo);
     font-family: var(--fonte-principal);
     font-size: 16px;
